--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     }
 </style>
 <body>
+<p>Source code: https://gitlab.com/andzav/PCBS3dmarksim</p>
 <h2>CPU</h2>
 <select id="cpu" class="btn-block"></select>
 <h2>GPU</h2>
