--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,7 @@
         for (let i=1;i<9;i++){
             option += '<option value="'+ i + '">' + i + '</option>';
         }
-        $('#ramSticks').append(option);
+        $('#ramSticks').html(option);
 	  }
 	});
 </script>
